[package]
name = "rusty_orm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["rusty_orm_macros"]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
thiserror = "1.0"
serde_json = "1.0.128"
rusty_orm_macros = { path = "rusty_orm_macros" }


[[examples]]
name = "usage_example"
